# asv-biom-cookbooks

./: .gitignore  .mise.toml  LICENSE  README.md  biom-bundle-format.md  pyproject.toml
fast-lookup/: 00_index_fasta.sh  01_extract_bundle.sh  02_export_taxonomy.sh  03_find_sequence.sh  03b_find_sequence_indexed.sh  04_find_taxonomy.sh  05_find_counts.sh  06_filter_by_taxon.sh  07_filter_by_sample.sh  08_biom_to_fasta.sh  README.md  complete_workflow.sh  environment.yml  lookup.py
phyloseq/: 01_basic_import.R  02_forward_sequences.R  03_reverse_sequences.R  04_paired_sequences.R  05_external_metadata.R  06_sample_id_mapping.R  07_taxonomy_import.R  README.md  complete_workflow.R  environment.yml
qiime2/: 01_import_feature_table.sh  02_import_forward_sequences.sh  03_import_reverse_sequences.sh  04_import_taxonomy.sh  05_diversity_analysis.sh  README.md  complete_workflow.sh  environment.yml  transform_reverse_fasta.py
scripts/: setup-tools.sh
thoughts/shared/plans/: 2026-01-20-biom-v21-cookbook-testing-alignment.md
thoughts/shared/research/: 2026-01-20-biom-bundle-v21-cookbook-alignment.md  2026-01-20-indexed-fasta-lookups.md
utilities/: README.md  preprocess_reverse_fasta.R  preprocess_reverse_fasta.py  preprocess_reverse_fasta.sh
